# Typink

./: .gitignore  CLAUDE.md  Makefile  README.md  flake.nix  flutter_rust_bridge.yaml  generate_bridge.sh  linux.sh  shell.nix
.github/workflows/: ci.yml
docs/brain/: implementation_plan.md  task.md  walkthrough.md
flutter_app/: LICENSE-MIT  README.md  pubspec.lock.json  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/assets/: snippets.json
flutter_app/integration_test/: editor_test.dart
flutter_app/lib/: main.dart
flutter_app/lib/editor/: color_picker.dart  drawing_pad.dart  editor_completion_handler.dart  editor_ime_handler.dart  editor_theme_mixin.dart  file_tree.dart  handwriting_canvas.dart  handwriting_provider.dart  headless_editor.dart  headless_editor_painter.dart  notebook_sidebar.dart  providers.dart  settings_panel.dart  settings_provider.dart  theme_provider.dart  typst_editor.dart  vim_provider.dart  workspace_provider.dart  workspace_selector.dart
flutter_app/lib/frb_generated.dart/: api.dart  editor.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  highlighter.dart  typst_engine.dart  vim_engine.dart
flutter_app/lib/models/: document.dart  stroke.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: completion_test.dart  persistence_test.dart  widget_test.dart
notes/: chapter1.typ  template.typ
rust/: Cargo.toml  build_android.sh  tests_source.rs
rust/src/: api.rs  bridge_generated.io.rs  editor.rs  frb_generated.rs  highlighter.rs  lib.rs  typst_engine.rs  vim_engine.rs
(+4 files in other folders)
