[package]
name = "typink_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
typst = "=0.14.2"
typst-render = "=0.14.2"
typst-svg = "=0.14.2"
typst-library = "=0.14.2"
typst-pdf = "=0.14.2"
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usvg = "0.45.0"
resvg = "0.45.0"
notify = "8.0.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
once_cell = "1.18"
walkdir = "2.4"
typst-syntax = "=0.14.2"
typst-ide = "=0.14.2"
ropey = "1.6"
android_logger = "0.14"
log = "0.4"
regex = "1.10"

[profile.release]
strip = true
lto = true
opt-level = 'z'
panic = "abort"
codegen-units = 1
